2003-01-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/fileparts.m: New file.

	* io/beep.m: New file.

	* plot/__pltopt1__.m: Call undo_string_escapes for title part of
	format only.

2003-01-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strings/strcmp.m: Handle cell arrays of strings.

2002-12-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/int2str.m: Handle matrices.
	* general/num2str.m: Likewise.
	Also handle optional precision, and format args.

2002-12-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* audio/Makefile.in, control/base/Makefile.in,
	control/hinf/Makefile.in, control/obsolete/Makefile.in,
	control/system/Makefile.in, elfun/Makefile.in,
	finance/Makefile.in, general/Makefile.in, image/Makefile.in,
	io/Makefile.in, linear-algebra/Makefile.in,
	miscellaneous/Makefile.in, polynomial/Makefile.in,
	quaternion/Makefile.in, set/Makefile.in, signal/Makefile.in,
	specfun/Makefile.in, special-matrix/Makefile.in,
	statistics/base/Makefile.in, statistics/distributions/Makefile.in,
	statistics/models/Makefile.in, statistics/tests/Makefile.in,
	strings/Makefile.in, time/Makefile.in, plot/Makefile.in,
	deprecated/Makefile.in: Use new do-script-install and
	do-script-uninstall macros.

	* mkpkgadd: New script.

	* plot/close.m: New file.

2002-11-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* image/image.m: Use -raw option for xv.
	From Remy Bruno <remy.bruno@libertysurf.fr>

2002-11-12  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/base/lsim.m: Use approximate test for step size change.

	* signal/bartlett.m: Avoid row/column mismatch error.

2002-11-12  Paul Kienzle <pkienzle@users.sf.net>

	* statistics/base/var.m: Use better formula for improved accuracy.

2002-11-04  Nicholas Piper <nick-octave@nickpiper.co.uk>

	* control/base/lsim.m: Correct doc string.

2002-11-04  A S Hodel <a.s.hodel@Eng.Auburn.EDU>

	* control/system/syssub.m: Call tf2sys with Gnum-Hnum, not Gnum+Hnum.

2002-11-01  John W. Eaton  <jwe@bevo.che.wisc.edu>
